force-app/main/default/objects/All_Orders__c/All_Orders__c.object-meta.xml
<CustomObject>
    <label>All Orders</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>All Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>