force-app/main/default/objects/All_Orders__c/fields/Product_Image__c.field-meta.xml
<CustomField>
    <fullName>Product_Image__c</fullName>
    <label>Product Image</label>
    <type>Url</type>
</CustomField>