force-app/main/default/objects/All_Orders__c/fields/Series__c.field-meta.xml
<CustomField>
    <fullName>Series__c</fullName>
    <label>Series</label>
    <length>30</length>
    <type>Text</type>
</CustomField>