force-app/main/default/objects/All_Orders__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Customer_Name__c</columns>
    <columns>Customer_Email__c</columns>
    <columns>NAME</columns>
    <columns>MRP__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>